# spli

./: Cargo.toml
src/: exception.rs  executor.rs  function.rs  lib.rs  list.rs  main.rs  test_helpers.rs
src/function/: mod.rs
src/function/builtins/: io.rs  lang.rs  list.rs  math.rs  mod.rs
src/mapper_pool/: mapper.rs  mod.rs  pool.rs
src/parser/: error_handling.rs  ident.rs  list.rs  mod.rs  number.rs  string.rs
