[package]
name = "spli"
version = "0.1.0"
authors = ["Maximilian Siling <mouse-art@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replace_with = "0.1.5"
nom = "5.1.1"
nom_locate = "2.0.0"
nom-greedyerror = "0.2.0"
show-my-errors = "0.1.3"
typed-arena = "2.0.1"
scoped-pool = "1.0.0"
num_cpus = "1.13.0"
rustyline = "6.1.2"
